# AI_Calendar

./: .env  README.md  docker-compose.yml  main.py  planning.md  pyproject.toml
client/: Dockerfile
client/src/: App.py  app.py
client/src/assets/: dummy.py
client/src/pages/: login.py
client/src/templates/: login.html  signup.html
db/: Dockerfile
server/: Dockerfile
server/src/: server.py
