[project]
name = "ai-calendar"
version = "0.1.0"
description = ""
authors = [
    {name = "pocafup",email = "pocafup@pocafupdeMacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
