[project]
name = "ai-calendar"
version = "0.1.0"
description = ""
authors = [
    {name = "pocafup",email = "pocafup@pocafupdeMacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "Werkzeug (>=3.0.0,<3.1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
